# git-collage

./: .containerignore  .gitignore  Cargo.toml  Containerfile  Cross.toml  README.md  deny.toml  devenv.nix  flake.nix  rust-toolchain.toml  treefmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
examples/: config.toml  provider1.toml  provider2.toml  sample.toml  simple_test.toml
src/: config.rs  main.rs  matching_rules.rs  util.rs
src/filter/: blocklist.rs  mod.rs  url_path_prefix.rs
src/operation/: garbage_collect.rs  list.rs  mirror.rs  mod.rs  stale.rs
src/source/: github_authed_user.rs  mod.rs  static_list.rs
