[package]
name = "git-collage"
description = "A tool for selectively mirroring Git repositories"
version = "0.4.4"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/DanNixon/git-collage"
repository = "https://github.com/DanNixon/git-collage"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "mirror", "github"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.23"
crossbeam-channel = "0.5.15"
enum_dispatch = "0.3.13"
env_logger = "0.11.6"
futures = "0.3.31"
git2 = "0.20.1"
log = "0.4.28"
octocrab = "0.47.0"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_variant = "0.1.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
